--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -17,10 +17,7 @@
         android:textSize="40dp"
         android:textStyle="bold"
         android:text="GroupX"/>
-    <Button
-        android:layout_width="wrap_content"
-        android:text="Leave"
-        android:layout_height="wrap_content"/>
+
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -43,6 +40,7 @@
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:id="@+id/createEvent"
         android:text="Create Event"/>
 
     <androidx.recyclerview.widget.RecyclerView
