message and events front end part3 - fixed bugs

--- a/app/src/main/res/layout/activity_event_form.xml
+++ b/app/src/main/res/layout/activity_event_form.xml
@@ -18,6 +18,7 @@
             android:layout_height="wrap_content"
             android:text="Create Event"
             android:textSize="20sp"
+            android:id="@+id/eventformtitle"
             android:textStyle="bold"/>
 
 
