--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -10,33 +10,33 @@
 
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:id="@+id/groupname"
         android:layout_gravity="center"
+        android:textAlignment="center"
         android:textSize="40dp"
         android:textStyle="bold"
         android:text="GroupX"/>
 
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="Group Description"
         android:textSize="30dp"
-        android:textStyle="bold"
-        android:layout_marginLeft="5dp"/>
+        android:textStyle="bold"/>
     <TextView
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginLeft="5dp"
         android:textSize="20dp"
         android:text="Description is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
         android:id="@+id/groupDescription"/>
     <TextView
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textSize="30dp"
-        android:text="All List Events"/>
+        android:textStyle="bold"
+        android:text="All Listed Events"/>
     <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
