--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -5,7 +5,7 @@
     android:layout_height="wrap_content"
     android:orientation="horizontal"
     android:padding="10dp"
-    android:background="@color/colorPrimary">
+    android:background="@color/eventCard">
 
     <RelativeLayout
         android:layout_width="fill_parent"
@@ -47,7 +47,13 @@
             android:layout_alignParentRight="true"
             android:id="@+id/joinEvent"
             android:text="Join"/>
+
+
     </RelativeLayout>
+
+
+
+
 
 
 
