--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -21,16 +21,6 @@
         android:textStyle="bold"
         android:text="EventX"
         />
-    <ImageButton
-        android:layout_width="40sp"
-        android:layout_height="40sp"
-        android:layout_alignParentRight="false"
-        android:background="@drawable/edit_foreground"
-        android:layout_alignBottom="@+id/eventname"
-        android:id="@+id/edit"
-        android:layout_alignStart="@+id/eventjoin"
-
-        android:text="edit"/>
     <Button
         android:layout_width="wrap_content"
         android:text="Leave"
@@ -58,6 +48,15 @@
             android:textSize="20sp"
             android:text="Time: 11/1/2020"
             android:id="@+id/eventtime"/>
+        <ImageButton
+            android:layout_width="40sp"
+            android:layout_height="40sp"
+            android:layout_alignParentRight="false"
+            android:background="@drawable/edit_foreground"
+            android:layout_alignBottom="@+id/eventtime"
+            android:id="@+id/edit"
+            android:layout_alignRight="@+id/eventtime"
+            android:text="edit"/>
         <TextView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
