--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -15,27 +15,37 @@
         android:id="@+id/groupname"
         android:layout_gravity="center"
         android:textAlignment="center"
-        android:textSize="40dp"
+        android:textSize="30sp"
+        android:textColor="#000000"
         android:textStyle="bold"
         android:text="GroupX"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingLeft="5sp"
         android:text="Group Description"
-        android:textSize="30dp"
+        android:textSize="25sp"
+        android:textColor="@color/colorpurple"
         android:textStyle="bold"/>
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:textSize="20dp"
+        android:textSize="20sp"
+        android:textColor="#000000"
+        android:paddingLeft="5sp"
+        android:paddingTop="5sp"
+        android:paddingBottom="10sp"
+        android:fontFamily="serif"
         android:text="Description is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
         android:id="@+id/groupDescription"/>
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:textSize="30dp"
+        android:textSize="25sp"
         android:textStyle="bold"
+        android:paddingLeft="5sp"
+        android:textColor="@color/colorpurple"
         android:text="All Listed Events"/>
     <Button
         android:layout_width="wrap_content"
