--- a/app/src/main/res/layout/groups_fragment.xml
+++ b/app/src/main/res/layout/groups_fragment.xml
@@ -12,10 +12,12 @@
             android:layout_marginTop="10dp"
             android:layout_marginLeft="5dp"
             android:textColor="#000000"
-            android:textSize="25dp"
+            android:textStyle="bold"
+            android:textSize="30sp"
+            android:layout_gravity="center"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Groups Joined" />
+            android:text="Your Groups" />
 
         <GridView
             android:layout_width="match_parent"
