--- a/app/src/main/res/layout/activity_event.xml
+++ b/app/src/main/res/layout/activity_event.xml
@@ -10,14 +10,16 @@
 
     <RelativeLayout
         android:layout_width="fill_parent"
-        android:layout_height="wrap_content">
+        android:layout_height="wrap_content"
+        android:id="@+id/eventsummary">
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/eventname"
+        android:textColor="#000000"
         android:layout_gravity="center"
         android:layout_centerHorizontal="true"
-        android:textSize="40sp"
+        android:textSize="30sp"
         android:textStyle="bold"
         android:text="EventX"
         />
@@ -34,6 +36,7 @@
         android:text="Event Summary"
         android:textSize="25sp"
         android:textStyle="bold"
+        android:textColor="#000000"
         android:layout_alignTop="@+id/eventjoin"
         android:layout_alignBottom="@+id/eventjoin"
         android:layout_below="@+id/eventname"
@@ -46,6 +49,7 @@
             android:layout_below="@+id/desctitle"
             android:layout_marginLeft="5dp"
             android:textSize="20sp"
+            android:textColor="#000000"
             android:text="Time: 11/1/2020"
             android:id="@+id/eventtime"/>
         <ImageButton
@@ -62,6 +66,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/eventtime"
             android:layout_marginLeft="5dp"
+            android:textColor="#000000"
             android:text="Location: 123 Parkway, San Jose"
             android:textSize="20sp"
             android:id="@+id/eventlocation"/>
@@ -70,6 +75,7 @@
             android:layout_height="wrap_content"
             android:layout_below="@+id/eventlocation"
             android:layout_marginLeft="5dp"
+            android:textColor="#000000"
             android:textSize="20sp"
             android:text="About this event:"
             android:id="@+id/aboutevent"/>
@@ -79,19 +85,25 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/aboutevent"
         android:layout_marginLeft="5dp"
+        android:textColor="#000000"
+        android:fontFamily="serif"
+        android:paddingBottom="20sp"
         android:textSize="20dp"
         android:text="Description is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
         android:id="@+id/desc"/>
 
-    <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+    <ImageButton
+        android:layout_width="60sp"
+        android:layout_height="60sp"
         android:text="Chat"
         android:id="@+id/chat"
+        android:src="@drawable/message"
+        android:background="@drawable/chat_bubble_received"
         android:layout_centerHorizontal="true"
         android:layout_below="@+id/desc"/>
 
     </RelativeLayout>
+
 
 
 
