--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -11,5 +11,6 @@
     <color name="cream">#E9DCCD</color>
     <color name="limestone">#DFE2D2</color>
     <color name="grey">#D3D3D3</color>
+    <color name="orange">#FFA500</color>
 
 </resources>
