--- a/app/src/main/res/layout/admin_user_row.xml
+++ b/app/src/main/res/layout/admin_user_row.xml
@@ -10,43 +10,35 @@
     <RelativeLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
+
         <TextView
+            android:id="@+id/admin_email"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/joinEvent"
-            android:layout_alignBottom="@+id/joinEvent"
+            android:layout_alignTop="@+id/admin_delUser"
+            android:layout_alignBottom="@+id/admin_delUser"
             android:layout_alignParentLeft="true"
-            android:id="@+id/eventTitle"
-            android:textSize="22sp"
             android:gravity="center"
-            android:textStyle="bold"
-            android:text="Event Name"/>
-        <TextView
-            android:id="@+id/eventtime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8.10.2020 12:30"
-            android:layout_below="@+id/eventTitle"
-            android:layout_alignParentLeft="true"
-            android:textSize="20sp"/>
+            android:text="Email"
+            android:textSize="22sp"
+            android:textStyle="bold" />
 
         <TextView
-            android:id="@+id/eventloc"
+            android:id="@+id/admin_nickName"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="123 parkway"
-            android:layout_below="@+id/eventtime"
+            android:layout_below="@+id/admin_email"
             android:layout_alignParentLeft="true"
-            android:textSize="20sp"/>
-
+            android:text="Nick Name"
+            android:textSize="20sp" />
 
 
         <Button
+            android:id="@+id/admin_delUser"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_alignParentRight="true"
-            android:id="@+id/admin_delUser"
-            android:text="Join"/>
+            android:text="Delete" />
     </RelativeLayout>
 
 
