--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -19,7 +19,7 @@
             tools:context="com.myexample.privateeventconnection.MapsMarkerActivity" />
 
         <TextView
-            android:id="@+id/textView"
+            android:id="@+id/home_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="My Events" />
