update groups display and logout

--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -1,13 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    xmlns:android="http://schemas.android.com/apk/res/android"
+
+    android:layout_height="wrap_content"
+    android:layout_width="wrap_content"
+    android:orientation="vertical"
+    android:padding="20dp"
+    android:gravity="center"
+
+
+    >
     <LinearLayout
-        android:layout_marginTop="20dp"
-        android:layout_marginLeft="20dp"
+
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@color/ivory"
+        android:background="@color/colorPrimaryDark"
         android:gravity="center"
         >
 
@@ -15,10 +22,9 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/groupname"
-            android:textStyle="bold"
             android:text="GroupX"
             android:textSize="25dp"
-        />
+            />
 
 
     </LinearLayout>
