--- a/app/src/main/res/layout/activity_group_info.xml
+++ b/app/src/main/res/layout/activity_group_info.xml
@@ -28,16 +28,21 @@
         android:textSize="25sp"
         android:textColor="@color/colorpurple"
         android:textStyle="bold"/>
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:textSize="20sp"
-        android:textColor="#000000"
-        android:paddingLeft="5sp"
-        android:paddingTop="5sp"
-        android:paddingBottom="10sp"
-        android:text="Description is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
-        android:id="@+id/groupDescription"/>
+    <ScrollView
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textSize="20sp"
+            android:textColor="#000000"
+            android:paddingLeft="5sp"
+            android:paddingTop="5sp"
+            android:paddingBottom="10sp"
+            android:text="Description is the pattern of narrative development that aims to make vivid a place, object, character, or group. Description is one of four rhetorical modes (also known as modes of discourse), along with exposition, argumentation, and narration."
+            android:id="@+id/groupDescription"/>
+    </ScrollView>
+
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -55,7 +60,8 @@
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/eventList"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"/>
+        android:layout_height="match_parent"
+        />
 
 
 
