--- a/app/src/main/res/layout/event_row.xml
+++ b/app/src/main/res/layout/event_row.xml
@@ -1,61 +1,46 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <LinearLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:orientation="horizontal"
+    android:orientation="vertical"
     android:padding="10dp"
     android:background="@color/colorPrimary">
 
-    <RelativeLayout
+    <LinearLayout
         android:layout_width="fill_parent"
         android:layout_height="wrap_content">
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_alignTop="@+id/jjjoin"
-            android:layout_alignBottom="@+id/jjjoin"
-            android:layout_alignParentLeft="true"
+            android:layout_weight="1"
             android:id="@+id/eventTitle"
             android:textSize="22sp"
-            android:gravity="center"
+            android:gravity="left"
             android:textStyle="bold"
             android:text="Event Name"/>
-        <TextView
-            android:id="@+id/eventtime"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="8.10.2020 12:30"
-            android:layout_below="@+id/eventTitle"
-            android:layout_alignParentLeft="true"
-            android:textSize="20sp"/>
 
-        <TextView
-            android:id="@+id/eventloc"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="123 parkway"
-            android:layout_below="@+id/eventtime"
-            android:layout_alignParentLeft="true"
-            android:textSize="20sp"/>
+            <Button
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_weight="0"
+                android:id="@+id/jjjoin"
+                android:text="Leave"/>
 
+    </LinearLayout>
+    <TextView
+        android:id="@+id/eventtime"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="8.10.2020 12:30"
+        android:textSize="20sp"/>
 
-
-        <Button
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_alignParentRight="true"
-            android:id="@+id/jjjoin"
-            android:text="Join"/>
-
-
-    </RelativeLayout>
-
-
-
-
-
-
-
+    <TextView
+        android:id="@+id/eventloc"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="123 parkway"
+        android:textSize="20sp"/>
 
 </LinearLayout>
