--- a/app/src/main/res/layout/row_data.xml
+++ b/app/src/main/res/layout/row_data.xml
@@ -1,30 +1,23 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout
-    xmlns:android="http://schemas.android.com/apk/res/android"
-
-    android:layout_height="wrap_content"
-    android:layout_width="wrap_content"
-    android:orientation="vertical"
-    android:padding="20dp"
-    android:gravity="center"
-
-
-    >
+    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
+    android:layout_height="match_parent">
     <LinearLayout
-
+        android:layout_marginTop="20dp"
+        android:layout_marginLeft="20dp"
         android:layout_width="150dp"
         android:layout_height="150dp"
-        android:background="@color/cream"
+        android:background="@color/ivory"
         android:gravity="center"
         >
-
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:id="@+id/groupname"
+            android:textStyle="bold"
             android:text="GroupX"
             android:textSize="25dp"
-            />
+        />
 
 
     </LinearLayout>
