--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -22,6 +22,8 @@
             android:id="@+id/home_textView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:textSize="30sp"
+            android:textStyle="bold"
             android:text="My Events" />
 
         <ListView
