--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,16 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#009688</color>
-    <color name="colorPrimaryDark">#226e6e</color>
+    <color name="colorPrimary">#D9ADAD</color>
+    <color name="colorPrimaryDark">#AD9D9d</color>
     <color name="eventCard">#6CBF84</color>
     <color name="colorAccent">#03DAC5</color>
     <color name="colorpurple">#726A95</color>
     <color name="pink">#F2AD9F</color>
     <color name="ivory">#F4E8C1</color>
-    <color name="rose">#F26968</color>
     <color name="cream">#E9DCCD</color>
     <color name="limestone">#DFE2D2</color>
     <color name="grey">#D3D3D3</color>
     <color name="orange">#FFA500</color>
-
+    <color name="pink1">#FFD2A5</color>
+    <color name="pink2">#FFFFC1</color>
+    <color name="pink3">#FFA8B8</color>
+    <color name="pink4">#D988BC</color>
 </resources>
