--- a/app/src/main/res/layout/info_fragment_design_ui.xml
+++ b/app/src/main/res/layout/info_fragment_design_ui.xml
@@ -38,7 +38,6 @@
                     android:layout_width="60dp"
                     android:layout_height="60dp"
                     android:layout_alignParentRight="true"
-                    android:src="@drawable/default_pic"
                     app:civ_border_color="@color/imageBorderColor"
                     app:civ_border_width="2dp" />
 
@@ -49,12 +48,14 @@
                 android:layout_width="match_parent"
                 android:layout_height="1dp"
                 android:layout_marginTop="10dp"
+                android:layout_marginBottom="10dp"
                 android:background="?android:attr/listDivider" />
 
             <TextView
                 android:id="@+id/textView3"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center_vertical"
                 android:text="General Settings"
                 android:textStyle="bold" />
 
@@ -129,6 +130,7 @@
             </LinearLayout>
 
             <LinearLayout
+                android:id="@+id/yf_linearLayout_uploadAvatar"
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 android:orientation="horizontal">
@@ -148,9 +150,10 @@
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
                     android:layout_weight="1"
-                    android:text="Upload Avator" />
+                    android:text="Upload Avatar" />
 
                 <ImageView
+                    android:id="@+id/imageView_uploading"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
@@ -173,6 +176,8 @@
                     android:id="@+id/divider2"
                     android:layout_width="match_parent"
                     android:layout_height="1dp"
+                    android:layout_marginTop="10dp"
+                    android:layout_marginBottom="10dp"
                     android:background="?android:attr/listDivider" />
 
                 <TextView
